test/fail_compilation/duplicateModule.d
/*
REQUIRED_ARGS: fail_compilation/duplicateModule.d
PERMUTE_ARGS:
TEST_OUTPUT:
---
Error: module `duplicateModule` from file fail_compilation/duplicateModule.d is specified twice on the command line
---
*/
